<resources>
    <string name="app_name">Showcase</string>
    <string name="movie_title_search_hint">Search by Movie Title</string>
    <string name="main_search_title">Search</string>
    <string name="main_search_button_clear">CLEAR</string>
    <string name="main_search_button_positive">SEARCH</string>
    <string name="main_browse_title">Browse</string>
    <string name="main_browse_genre_hint">By Genre</string>
    <string name="main_browse_button_positive">BROWSE</string>
    <string name="movie_detail_release_date">Release Date</string>
    <string name="movie_detail_rating">Rating</string>
</resources>
