<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.main.MainFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/searchCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@color/colorSurface">

                <TextView
                    android:id="@+id/searchTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_search_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="8dp"
                    android:textColor="@color/colorOnSurface"
                    style="@style/TextAppearance.MaterialComponents.Headline6"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputMovieTitleSearchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/searchTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/movie_title_search_hint"
                    app:boxBackgroundColor="@color/colorSurface"
                    app:startIconDrawable="@drawable/ic_search_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputMovieTitleSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorOnSurface"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonClearSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/buttonSearch"
                    app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
                    android:layout_marginEnd="64dp"
                    android:text="@string/main_search_button_clear"
                    style="?attr/materialButtonOutlinedStyle"/>

                <Button
                    android:id="@+id/buttonSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/inputMovieTitleSearchLayout"
                    app:layout_constraintEnd_toEndOf="@+id/inputMovieTitleSearchLayout"
                    android:text="@string/main_search_button_positive"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/browseCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchCard"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@color/colorSurface">

                <TextView
                    android:id="@+id/browseTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_browse_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="8dp"
                    android:textColor="@color/colorOnSurface"
                    style="@style/TextAppearance.MaterialComponents.Headline6"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/browseGenreDropdown"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:inputType="none"
                    app:layout_constraintTop_toBottomOf="@+id/browseTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:boxBackgroundColor="@color/colorSurface"
                    android:hint="@string/main_browse_genre_hint">

                    <AutoCompleteTextView
                        android:id="@+id/browseGenreAutoComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:editable="false"
                        android:textColor="@color/colorOnSurface"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonBrowse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/browseGenreDropdown"
                    app:layout_constraintEnd_toEndOf="@+id/browseGenreDropdown"
                    android:text="@string/main_browse_button_positive"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

